--- a/news.html
+++ b/news.html
@@ -34,5 +34,19 @@
     </script>
 </div>
 
+<div class="container-fluid no-padding">
+    <div class="row">
+        <div class="col-10 offset-1">
+            <div class="video-container">
+                <iframe class="video"
+                        src="https://www.youtube.com/embed/znowFIBK1lk"
+                        title="YouTube video player"
+                        frameborder="0"
+                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                        allowfullscreen></iframe>
+            </div>
+        </div>
+    </div>
+</div>
 </body>
 </html>
