--- a/index.html
+++ b/index.html
@@ -59,17 +59,16 @@
                             <a class="nav-link nav-button" href="news.html"><span>News </span></a>
                         </div>
                         <div class="col nav-button-div">
-                            <a class="nav-link nav-button" href="events.html"><span>Events </span></a>
+                            <a class="nav-link nav-button" href="guides.html"><span>Guides & Tutorials </span></a>
                         </div>
                         <div class="col nav-button-div">
-                            <a class="nav-link nav-button" href="guides.html"><span>Guides & Tutorials </span></a>
+                            <a class="nav-link nav-button" href="quizzes.html"><span>Quizzes </span></a>
                         </div>
                     </div>
                 </nav>
             </div>
             <!-- Subscription, Time and Search -->
             <div class="col-3 d-flex align-items-center justify-content-center">
-                <button>Subscribe to our daily digest!</button>
                 <div id="date-and-time-div" class="current-date-and-time">
                     <span id="current-date"></span>
                     <span id="current-time"></span>
@@ -361,7 +360,7 @@
 </div>
 </div>
 <footer>
-    <p>Footer</p>
+    <button>Subscribe to our daily digest!</button>
 </footer>
 <script src="js/vendor/modernizr-3.11.2.min.js"></script>
 <script src="js/plugins.js"></script>
