--- a/news.html
+++ b/news.html
@@ -65,7 +65,7 @@
             <div class="col-3">
                 <button>Subscribe to our daily digest!</button>
                 <div id="date-and-time-div" class="current-date-and-time">
-                    <span id="current-date"></span>
+                    <b><span id="current-date"></span></b>
                     <span id="current-time"></span>
                 </div>
             </div>
