--- a/index.html
+++ b/index.html
@@ -90,9 +90,9 @@
     <div class="row">
         <div class="col-10 offset-1">
             <header style="margin-top: 3rem; margin-bottom: 3rem;">
-                <h2 style="text-align: center;">Welcome to Data Engineering Daily</h2>
-                <h4 style="text-align: center;">Your #1 source for everything Data Engineering, Open Source and
-                    more!</h4>
+                <h1 style="text-align: center;">Welcome to Data Engineering Daily</h1>
+                <h3 style="text-align: center;">Your #1 source for everything Data Engineering, Open Source and
+                    more!</h3>
                 <hr>
             </header>
         </div>
@@ -172,10 +172,12 @@
                 <div class="slideitem slideitem-news">
                     <div class="col d-flex align-items-center justify-content-center">
                         <div>
-                            <h1 style="text-align: center; margin-bottom: 1rem;">Apache Airflow <b>2.0</b> is
-                                finally
-                                here!
-                            </h1>
+                            <a href="news.html#apache-airflow-news-button">
+                                <h1 style="text-align: center; margin-bottom: 1rem;">Apache Airflow <b>2.0</b> is
+                                    finally
+                                    here!
+                                </h1>
+                            </a>
                             <h4 style="text-align: center; margin-top: 1rem;">New Operators, a fresh UI,
                                 <wbr>
                                 better integrations
@@ -185,27 +187,33 @@
                         </div>
                         <div class="vr"></div>
                         <div>
-                            <img src="img/news/airflow-2.jpg" alt="" height="330px" width="600px">
+                            <a href="news.html#apache-airflow-news-button">
+                                <img src="img/news/airflow-2.jpg" alt="" height="330px" width="600px">
+                            </a>
                         </div>
                     </div>
                 </div>
                 <div class="slideitem slideitem-news">
                     <div class="col d-flex align-items-center justify-content-center">
                         <div>
-                            <h1 style="text-align: center; margin-bottom: 2rem;">Julia has a new <b><i>Pkg</i></b>
-                                Manager
-                            </h1>
-                            <h4 style="text-align: center; margin-top: 2rem;">Meet <b>Pkg</b> - a complete rewrite
-                                of
-                                <wbr>
-                                Julia's old package manager,
-                                <wbr>
-                                released together with Julia v1.0
-                            </h4>
+                            <a href="news.html#julia-pkg-news-button">
+                                <h1 style="text-align: center; margin-bottom: 2rem;">Julia has a new <b><i>Pkg</i></b>
+                                    Manager
+                                </h1>
+                                <h4 style="text-align: center; margin-top: 2rem;">Meet <b>Pkg</b> - a complete rewrite
+                                    of
+                                    <wbr>
+                                    Julia's old package manager,
+                                    <wbr>
+                                    released together with Julia v1.0
+                                </h4>
+                            </a>
                         </div>
                         <div class="vr"></div>
                         <div>
-                            <img src="img/news/julia-pkg-manager-news.png" alt="" height="330px" width="600px">
+                            <a href="news.html#julia-pkg-news-button">
+                                <img src="img/news/julia-pkg-manager-news.png" alt="" height="330px" width="600px">
+                            </a>
                         </div>
                     </div>
                 </div>
@@ -230,19 +238,23 @@
                 <div class="slideitem slideitem-news">
                     <div class="col d-flex align-items-center justify-content-center">
                         <div>
-                            <h1 style="text-align: center; margin-bottom: 1rem;">A Sneak Peek into Apache Spark
-                                <b>3.0</b>
-                            </h1>
-                            <h4 style="text-align: center; margin-top: 1rem;">After months of anticipation:
-                                <wbr>
-                                Did Spark finally make the jump
-                                <wbr>
-                                from <i>Great</i> to <b><i>Perfect</i></b>?
-                            </h4>
+                            <a href="news.html#apache-airflow-news-button">
+                                <h1 style="text-align: center; margin-bottom: 1rem;">A Sneak Peek into Apache Spark
+                                    <b>3.0</b>
+                                </h1>
+                                <h4 style="text-align: center; margin-top: 1rem;">After months of anticipation:
+                                    <wbr>
+                                    Did Spark finally make the jump
+                                    <wbr>
+                                    from <i>Great</i> to <b><i>Perfect</i></b>?
+                                </h4>
+                            </a>
                         </div>
                         <div class="vr"></div>
                         <div>
-                            <img src="img/news/apache-spark-3.png" alt="" height="330px" width="600px">
+                            <a href="news.html#apache-airflow-news-button">
+                                <img src="img/news/apache-spark-3.png" alt="" height="330px" width="600px">
+                            </a>
                         </div>
                     </div>
                 </div>
@@ -357,7 +369,6 @@
             </button>
         </div>
     </section>
-</div>
 </div>
 <footer>
     <button>Subscribe to our daily digest!</button>
