--- a/news.html
+++ b/news.html
@@ -76,20 +76,20 @@
 <div class="container-fluid no-padding">
     <div class="row">
         <div class="col-4 d-flex align-items-center justify-content-center">
-            <button type="button" class="btn btn-primary btn-lg btn-block" data-toggle="modal"
-                    data-target="#apache-airflow-modal">
+            <button id="apache-airflow-news-button" type="button" class="btn btn-primary btn-lg btn-block"
+                    data-toggle="modal" data-target="#apache-airflow-modal">
                 Apache Airflow <b>2.0</b> is finally here!
             </button>
         </div>
         <div class="col-4 d-flex align-items-center justify-content-center">
-            <button type="button" class="btn btn-primary btn-lg btn-block" data-toggle="modal"
-                    data-target="#julia-pkg-modal">
+            <button id="julia-pkg-news-button" type="button" class="btn btn-primary btn-lg btn-block"
+                    data-toggle="modal" data-target="#julia-pkg-modal">
                 Julia has a new <b><i>Pkg</i></b> Manager
             </button>
         </div>
         <div class="col-4 d-flex align-items-center justify-content-center">
-            <button type="button" class="btn btn-primary btn-lg btn-block" data-toggle="modal"
-                    data-target="#apache-spark-modal">
+            <button id="apache-spark-news-button" type="button" class="btn btn-primary btn-lg btn-block"
+                    data-toggle="modal" data-target="#apache-spark-modal">
                 A Sneak Peek into Apache Spark <b>3.0</b>
             </button>
         </div>
