--- a/index.html
+++ b/index.html
@@ -103,28 +103,16 @@
             <div class="top-news-hot-discussions-box">
                 <h5 style="text-align: center;">&#128172;&nbsp;Hot Discussions</h5>
                 <hr>
-                <ul>
-                    <li class="hot-discussions">
+                <ul id="top-discussions-list">
+                    <script id="top-discussions-handlebars-template" type="text/x-handlebars-template">
+                        {{#each discussions}}
+                        <li class="hot-discussions">
                         <span class="bullet-data">
-                            <a href="#">
-                                <b>[Apache Spark]</b> - When to use RDDs vs. DataFrames vs. DataSets
-                            </a>
+                            <a href="#">{{{this}}}</a>
                         </span>
-                    </li>
-                    <li class="hot-discussions">
-                        <span class="bullet-data">
-                            <a href="#">
-                                <b>[Python]</b> - What are the advantages of asyncio over multiprocessing/multithreading?
-                            </a>
-                        </span>
-                    </li>
-                    <li class="hot-discussions">
-                        <span class="bullet-data">
-                            <a href="#">
-                                <b>[Databases - PostgreSQL]</b> - stored procedure vs. external ORM - which is the better choice?
-                            </a>
-                        </span>
-                    </li>
+                        </li>
+                        {{/each}}
+                    </script>
                 </ul>
             </div>
         </div>
@@ -144,95 +132,26 @@
                 &#8249;
             </button>
             <div id="slidebox-news" class="slidebox-homepage slidebox-news">
-                <div class="slideitem slideitem-news">
-                    <div class="col d-flex align-items-center justify-content-center">
-                        <div>
-                            <a href="news.html#apache-airflow-news-button">
-                                <h1 style="text-align: center; margin-bottom: 1rem;">Apache Airflow <b>2.0</b> is
-                                    finally
-                                    here!
-                                </h1>
-                            </a>
-                            <h4 style="text-align: center; margin-top: 1rem;">New Operators, a fresh UI,
-                                <wbr>
-                                better integrations
-                                <wbr>
-                                and many more exciting features introduced...
-                            </h4>
-                        </div>
-                        <div class="vr"></div>
-                        <div>
-                            <a href="news.html#apache-airflow-news-button">
-                                <img src="img/news/airflow-2.jpg" alt="" height="330px" width="600px">
-                            </a>
+                <script id="slidebox-news-handlebars-template" type="text/x-handlebars-template">
+                    {{#each news}}
+                    <div class="slideitem slideitem-news">
+                        <div class="col d-flex align-items-center justify-content-center">
+                            <div>
+                                <a href="news.html#{{news-link}}">
+                                    <h1 style="text-align: center; margin-bottom: 1rem;">{{{header}}}</h1>
+                                </a>
+                                <h4 style="text-align: center; margin-top: 1rem;">{{{text}}}</h4>
+                            </div>
+                            <div class="vr"></div>
+                            <div>
+                                <a href="news.html#news.html#{{news-link}}">
+                                    <img src="img/news/{{image}}" alt="" height="330px" width="600px">
+                                </a>
+                            </div>
                         </div>
                     </div>
-                </div>
-                <div class="slideitem slideitem-news">
-                    <div class="col d-flex align-items-center justify-content-center">
-                        <div>
-                            <a href="news.html#julia-pkg-news-button">
-                                <h1 style="text-align: center; margin-bottom: 2rem;">Julia has a new <b><i>Pkg</i></b>
-                                    Manager
-                                </h1>
-                                <h4 style="text-align: center; margin-top: 2rem;">Meet <b>Pkg</b> - a complete rewrite
-                                    of
-                                    <wbr>
-                                    Julia's old package manager,
-                                    <wbr>
-                                    released together with Julia v1.0
-                                </h4>
-                            </a>
-                        </div>
-                        <div class="vr"></div>
-                        <div>
-                            <a href="news.html#julia-pkg-news-button">
-                                <img src="img/news/julia-pkg-manager-news.png" alt="" height="330px" width="600px">
-                            </a>
-                        </div>
-                    </div>
-                </div>
-                <div class="slideitem slideitem-news">
-                    <div class="col d-flex align-items-center justify-content-center">
-                        <div>
-                            <h1 style="text-align: center; margin-bottom: 1rem;">The state of Hadoop going into
-                                2021</h1>
-                            <h4 style="text-align: center; margin-top: 1rem;">With MapReduce all but diminished,
-                                <wbr>
-                                is the curtain closing on Hadoop's
-                                <wbr>
-                                relevance in the Big Data world?
-                            </h4>
-                        </div>
-                        <div class="vr"></div>
-                        <div>
-                            <img src="img/news/hadoop-curtain-news.jpg" alt="" height="330px" width="600px">
-                        </div>
-                    </div>
-                </div>
-                <div class="slideitem slideitem-news">
-                    <div class="col d-flex align-items-center justify-content-center">
-                        <div>
-                            <a href="news.html#apache-spark-news-button">
-                                <h1 style="text-align: center; margin-bottom: 1rem;">A Sneak Peek into Apache Spark
-                                    <b>3.0</b>
-                                </h1>
-                                <h4 style="text-align: center; margin-top: 1rem;">After months of anticipation:
-                                    <wbr>
-                                    Did Spark finally make the jump
-                                    <wbr>
-                                    from <i>Great</i> to <b><i>Perfect</i></b>?
-                                </h4>
-                            </a>
-                        </div>
-                        <div class="vr"></div>
-                        <div>
-                            <a href="news.html#apache-spark-news-button">
-                                <img src="img/news/apache-spark-3.png" alt="" height="330px" width="600px">
-                            </a>
-                        </div>
-                    </div>
-                </div>
+                    {{/each}}
+                </script>
             </div>
             <button id="news-arrow-right" class="arrow-button" style="margin-left: 2rem;"
                     onclick="scrollSlide('news' ,'right')">
@@ -248,6 +167,28 @@
     <div class="col-10 offset-1">
         <hr>
     </div>
+    <div id="videos">
+        <script id="videos-handlebars-template" type="text/x-handlebars-template">
+            {{#each videosRows}}
+            <div class="row video-row">
+                {{#each videos}}
+                <div class="col-5 {{#unless @index}}offset-1{{/unless}} d-flex align-items-center justify-content-center">
+                    <div class="video-container">
+                        <iframe class="video"
+                                src={{this}}
+                                title="YouTube video player" frameborder="0"
+                                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                                allowfullscreen>
+                        </iframe>
+                    </div>
+                </div>
+                {{/each}}
+            </div>
+            {{/each}}
+        </script>
+    </div>
+
+    <!--
     <div class="row video-row">
         <div class="col-5 offset-1 d-flex align-items-center justify-content-center">
             <div class="video-container">
@@ -293,6 +234,7 @@
             </div>
         </div>
     </div>
+        -->
     <div class="row" style="margin-top: 5rem;">
         <div class="col-4 offset-4 d-flex align-items-center justify-content-center">
             <h1>Upcoming Events</h1>
